# ingot

./: README.md  pyproject.toml
examples/: main_tester.py  quickstart.py  showcase.py
src/ingot/: __init__.py  toolbar.py  workspace.py
src/ingot/actions/: manager.py
src/ingot/scene/: __init__.py  base.py  drawable.py  item.py  manager.py  view.py
src/ingot/theming/: manager.py
